{
  "version": 4,
  "terraform_version": "1.0.4",
  "serial": 7,
  "lineage": "a06e07f4-9aea-64af-773b-676632c7b835",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "stg-pri",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:156736685434:route-table/rtb-0ddd74f22f12f9fe2",
            "id": "rtb-0ddd74f22f12f9fe2",
            "owner_id": "156736685434",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "AppTier": "rtb",
              "Application": "rtb",
              "Backup": "no",
              "Environment": "stg",
              "Name": "rtb-hshdim-stg-an2-pri"
            },
            "tags_all": {
              "AppTier": "rtb",
              "Application": "rtb",
              "Backup": "no",
              "Environment": "stg",
              "Name": "rtb-hshdim-stg-an2-pri"
            },
            "vpc_id": "vpc-0221729cec4066136"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "stg-pri-db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:156736685434:route-table/rtb-0b88c965e9111dfbc",
            "id": "rtb-0b88c965e9111dfbc",
            "owner_id": "156736685434",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "AppTier": "rtb",
              "Application": "rtb",
              "Backup": "no",
              "Environment": "stg",
              "Name": "rtb-hshdim-stg-an2-pri-db"
            },
            "tags_all": {
              "AppTier": "rtb",
              "Application": "rtb",
              "Backup": "no",
              "Environment": "stg",
              "Name": "rtb-hshdim-stg-an2-pri-db"
            },
            "vpc_id": "vpc-0221729cec4066136"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "stg-pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:156736685434:route-table/rtb-05866a04e6c73068c",
            "id": "rtb-05866a04e6c73068c",
            "owner_id": "156736685434",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-071303117c3f8345c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "AppTier": "rtb",
              "Application": "rtb",
              "Backup": "no",
              "Environment": "stg",
              "Name": "rtb-hshdim-stg-an2-pub"
            },
            "tags_all": {
              "AppTier": "rtb",
              "Application": "rtb",
              "Backup": "no",
              "Environment": "stg",
              "Name": "rtb-hshdim-stg-an2-pub"
            },
            "vpc_id": "vpc-0221729cec4066136"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}